# todo

./: Cargo.toml  README.md
.github/workflows/: development.yml
src/: lib.rs  main.rs
src/cli/: add.rs  add_tag.rs  cancel.rs  clean.rs  finish.rs  list.rs  mod.rs  remove_tag.rs  set_priority.rs
src/domain/entity/: item.rs  mod.rs  priority.rs  tag.rs
src/domain/usecase/: add.rs  add_id.rs  add_tag.rs  clean.rs  complete_id.rs  get.rs  mod.rs  plan.rs  remove.rs  remove_id.rs  remove_tag.rs  select.rs  set_priority.rs  transfer.rs
src/repository/: local.rs  memory.rs  mod.rs
src/repository/id/: mod.rs  trie.rs
src/repository/item/: local.rs  memory.rs  mod.rs
