[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.8", features = ["derive"] }
serde = { version = "1.0.164", features = ["serde_derive"] }
serde_json = "1.0.97"
snafu = "0.7.4"
